--- a/src/vs/workbench/parts/terminal/electron-browser/media/xterm.css
+++ b/src/vs/workbench/parts/terminal/electron-browser/media/xterm.css
@@ -140,6 +140,10 @@
 	color: transparent;
 }
 
+.xterm .xterm-accessibility-tree:focus [id^="xterm-active-item-"] {
+	outline: 1px solid #F80;
+}
+
 .xterm .live-region {
 	position: absolute;
 	left: -9999px;
